Revert "Fix IE link overflow in material detail view"
This reverts commit bda88a1885865c8a93cf60bd0b692f2b704d7236.

--- a/front-end/app/styles/_card.scss
+++ b/front-end/app/styles/_card.scss
@@ -14,11 +14,6 @@ md-card {
     & .item-link{
       word-wrap: break-word;
       display: block;
-      word-break: break-all;
-    }
-
-    & .wrapped.regular-link{
-      display: -ms-flexbox;
     }
   }
 }
